# mobi-av

./: CMakeLists.txt  DEPENDENCIES.md  Dockerfile  README.md  docker-compose.yml
benchmark/: arena_benchmark.cpp  elf_benchmark.cpp
src/: main.cpp
src/include/: mobi.cpp  mobi.hpp  mobi_elf.cpp  mobi_elf.hpp
src/include/db/: database.cpp  database.hpp  schema_tables.sql
src/include/db/.dbinit/: malwares.json
src/include/elf/: elf_dynamic.cpp  elf_dynamic.hpp  elf_header.cpp  elf_header.hpp  elf_parser.cpp  elf_parser.hpp  elf_program.cpp  elf_program.hpp  elf_section.cpp  elf_section.hpp
src/include/elf/structs_elf/: structs.hpp
src/include/fdm/: file_manager.cpp  file_manager.hpp
src/include/logger/: config.hpp  mlogger.cpp  mlogger.hpp
src/include/memory/: arena.cpp
test/: arena_test.cpp  elf_test.cpp  filemanager_test.cpp
